[package]
name = "rama-grpc"
description = "Grpc support for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "grpc", "network", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["transport", "compression"]
transport = [
    "dep:rama-http-core",
]
compression = ["dep:flate2", "dep:zstd"]

[dependencies]
base64 = { workspace = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-utils = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-http-types = { workspace = true }
rama-http-core = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "net"] }
flate2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }
sync_wrapper = { workspace = true }

[dev-dependencies]
static_assertions = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }

[lints]
workspace = true
