[package]
name = "rama-haproxy"
description = "rama HaProxy support"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "proxy", "haproxy", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[features]
default = []

[dependencies]
rama-core = { version = "0.2.0-alpha.5", path = "../rama-core" }
rama-net = { version = "0.2.0-alpha.5", path = "../rama-net" }
tokio = { workspace = true, features = ["macros", "io-std"] }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
