[package]
name = "rama-haproxy"
description = "rama HaProxy support"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "proxy", "haproxy", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
rama-core = { workspace = true }
rama-net = { workspace = true }
rama-utils = { workspace = true }
tokio = { workspace = true, features = ["macros", "io-std"] }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
