[package]
name = "rama-http-backend"
description = "error types and utilities for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "non-blocking", "http", "rama"]
categories = ["asynchronous", "network-programming", "web-programming::http-client", "web-programming::http-server"]
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[features]
default = []
tls = ["dep:rama-tls", "rama-net/tls"]
rustls = ["tls", "rama-net/rustls", "rama-tls-rustls"]
boring = ["tls", "rama-net/boring", "rama-tls/boring"]

[dependencies]
const_format = { workspace = true }
futures = { workspace = true }
h2 = { workspace = true }
rama-core = { version = "0.2.0-alpha.12", path = "../rama-core" }
rama-http-core = { version = "0.2.0-alpha.12", path = "../rama-http-core" }
rama-http-types = { version = "0.2.0-alpha.12", path = "../rama-http-types" }
rama-net = { version = "0.2.0-alpha.12", path = "../rama-net", features = ["http"] }
rama-tcp = { version = "0.2.0-alpha.12", path = "../rama-tcp", features = ["http"] }
rama-tls = { version = "0.2.0-alpha.12", path = "../rama-tls", optional = true }
rama-tls-rustls = { version = "0.2.0-alpha.12", path = "../rama-tls-rustls", optional = true }
rama-utils = { version = "0.2.0-alpha.12", path = "../rama-utils" }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }

[dev-dependencies]

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
