[package]
name = "rama-http-backend"
description = "error types and utilities for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "non-blocking", "http", "rama"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
tls = ["rama-net/tls"]

[dependencies]
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-http = { workspace = true }
rama-http-core = { workspace = true }
rama-http-headers = { workspace = true }
rama-http-types = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-tcp = { workspace = true, features = ["http"] }
rama-utils = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(target_family = "unix")'.dependencies]
rama-unix = { workspace = true }

[lints]
workspace = true
