[package]
name = "rama-http-backend"
description = "error types and utilities for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "non-blocking", "http", "rama"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[features]
default = []
opentelemetry = ["rama-core/opentelemetry", "rama-net/opentelemetry"]
# `rama-http-types/tls` is required so its `input_ext` protocol resolution sees the
# real `rama_tls::SecureTransport` (not its tls-off dummy); otherwise an
# origin-form request over a terminated TLS conn resolves to http instead of https.
tls = ["dep:rama-tls", "rama-tls/http", "rama-http-types/tls"]

[dependencies]
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-http = { workspace = true }
rama-http-core = { workspace = true }
rama-http-headers = { workspace = true }
rama-http-types = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-tcp = { workspace = true }
rama-tls = { workspace = true, optional = true }
rama-utils = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
rama-unix = { workspace = true }

[lints]
workspace = true
