[package]
name = "rama-http-core"
description = "rama http protocol implementation and low level utilities"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "proxy", "http", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

# Enables **unstable** APIs. Any API exposed by this feature has no backwards
# compatibility guarantees. In other words, you should not use this feature for
# anything besides experimentation. Definitely **do not** publish a crate that
# depends on this feature.
unstable = []

[dependencies]
ahash = { workspace = true }
atomic-waker = { workspace = true }
futures-channel = { workspace = true }
httparse = { workspace = true }
httpdate = { workspace = true }
indexmap = { workspace = true, features = ["std"] }
itoa = { workspace = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-http = { workspace = true }
rama-http-types = { workspace = true }
rama-utils = { workspace = true }
slab = { workspace = true }
smallvec = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-test = { workspace = true }
want = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

# Fuzzing
quickcheck = { workspace = true }
rand = { workspace = true }

# HPACK fixtures
hex = { workspace = true }
rama-error = { path = "../rama-error" }
serde_json = { workspace = true }
walkdir = { workspace = true }

# Examples
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }

[lints]
workspace = true
