[package]
name = "rama-http-types"
description = "rama http type defintions and high level utilities"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["http", "headers", "mime", "rama"]
categories = ["web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[features]
default = []
tls = ["rama-net/tls"]

[dependencies]
ahash = { workspace = true }
bytes = { workspace = true }
const_format = { workspace = true }
fnv = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
itertools = { workspace = true }
itoa = { workspace = true }
md5 = { workspace = true }
memchr = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
nom = { workspace = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-macros = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-utils = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
sync_wrapper = { workspace = true }
tokio = { workspace = true, features = ["macros", "io-std"] }

[dev-dependencies]
quickcheck = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
