[package]
name = "rama-http"
description = "rama http layers, services and other utilities"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "proxy", "http", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
opentelemetry = ["rama-core/opentelemetry", "rama-net/opentelemetry"]

default = []
compression = ["dep:async-compression"]
tls = ["rama-net/tls"]
[dependencies]
async-compression = { workspace = true, features = [
    "tokio",
    "brotli",
    "zlib",
    "gzip",
    "zstd",
], optional = true }
base64 = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
const_format = { workspace = true }
csv = { workspace = true }
http-range-header = { workspace = true }
httpdate = { workspace = true }
iri-string = { workspace = true }
matchit = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
percent-encoding = { workspace = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-http-headers = { workspace = true }
rama-http-types = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-ua = { workspace = true }
rama-utils = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "io-std"] }
tokio-util = { workspace = true, features = ["io"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
brotli = { workspace = true }
flate2 = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
rama-tcp = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
zstd = { workspace = true }

[lints]
workspace = true
