[package]
name = "rama-http"
description = "rama http layers, services and other utilities"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "proxy", "http", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["tracing-subscriber"]

[features]
default = []
opentelemetry = ["rama-core/opentelemetry", "rama-net/opentelemetry", "dep:opentelemetry-http"]
compression = [
    "dep:async-compression",
    "dep:compression-codecs",
    "dep:compression-core",
    "dep:rawzip",
    "dep:flate2",
]
tls = ["rama-net/tls"]

[dependencies]
ahash = { workspace = true }
async-compression = { workspace = true, features = [
    "tokio",
    "brotli",
    "zlib",
    "gzip",
    "zstd",
], optional = true }
base64 = { workspace = true }
bitflags = { workspace = true }
chrono = { workspace = true }
compression-codecs = { workspace = true, features = [
    "brotli",
    "deflate",
    "gzip",
    "zstd",
], optional = true }
compression-core = { workspace = true, optional = true }
const_format = { workspace = true }
csv = { workspace = true }
flate2 = { workspace = true, optional = true }
http = { workspace = true }
http-range-header = { workspace = true }
httpdate = { workspace = true }
iri-string = { workspace = true }
matchit = { workspace = true }
opentelemetry-http = { workspace = true, optional = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
radix_trie = { workspace = true }
rama-core = { workspace = true }
rama-http-headers = { workspace = true }
rama-http-types = { workspace = true }
rama-net = { workspace = true, features = ["http"] }
rama-utils = { workspace = true }
rand = { workspace = true }
rawzip = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "io-std"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
brotli = { workspace = true }
flate2 = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true
