[package]
name = "rama-http"
description = "rama http layers, services and other utilities"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "proxy", "http", "rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# native C deps can't cross-compile in the docs.rs builder; linux-only docs
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
opentelemetry = ["rama-core/opentelemetry", "rama-net/opentelemetry"]
compression = [
    "dep:async-compression",
    "dep:compression-codecs",
    "dep:compression-core",
    "dep:rawzip",
    "dep:flate2",
]
multipart = ["dep:multer", "dep:mime_guess", "dep:rama-http-hyperium"]
html = ["dep:rama-http-macros", "dep:memchr"]
rss = ["dep:quick-xml"]
# `rama-http-types/tls` is required so its `input_ext` protocol resolution sees the
# real `rama_tls::SecureTransport` (not its tls-off dummy); otherwise an
# origin-form request over a terminated TLS conn resolves to http instead of https.
tls = ["rama-http-types/tls"]

[dependencies]
ahash = { workspace = true }
async-compression = { workspace = true, features = ["tokio", "brotli", "zlib", "gzip", "zstd"], optional = true }
base64 = { workspace = true }
bitflags = { workspace = true }
compression-codecs = { workspace = true, features = ["brotli", "deflate", "gzip", "zstd"], optional = true }
compression-core = { workspace = true, optional = true }
const_format = { workspace = true }
csv = { workspace = true }
flate2 = { workspace = true, optional = true }
http-range-header = { workspace = true }
httpdate = { workspace = true }
iri-string = { workspace = true }
jiff = { workspace = true }
memchr = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
multer = { workspace = true, optional = true }
parking_lot = { workspace = true }
percent-encoding = { workspace = true }
pin-project-lite = { workspace = true }
quick-xml = { workspace = true, optional = true, features = ["async-tokio"] }
rama-core = { workspace = true, features = ["std"] }
rama-http-headers = { workspace = true }
rama-http-hyperium = { workspace = true, optional = true }
rama-http-macros = { workspace = true, optional = true }
rama-http-types = { workspace = true }
rama-json = { workspace = true }
rama-net = { workspace = true, features = ["std", "http"] }
rama-utils = { workspace = true, features = ["std"] }
rand = { workspace = true }
rawzip = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_html_form = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "io-std"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
brotli = { workspace = true }
flate2 = { workspace = true }
itertools = { workspace = true }
parking_lot = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
zstd = { workspace = true }

[lints]
workspace = true
