[package]
name = "rama-icap"
version = "0.1.0"
edition = "2021"
description = "ICAP (Internet Content Adaptation Protocol) support for Rama"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rama-net/rama"

[dependencies]
rama-core = { path = "../rama-core", version = "0.2.0-alpha.4" }
rama-error = { path = "../rama-error", version = "0.2.0-alpha.4" }
rama-net = { path = "../rama-net", version = "0.2.0-alpha.4" }
rama-http-core = { path = "../rama-http-core", version = "0.2.0-alpha.4" }
rama-http-types = { path = "../rama-http-types", version = "0.2.0-alpha.4" }
bytes = "1.5.0"
tokio = { version = "1.35.0", features = ["full"] }
thiserror = "1.0.50"
parking_lot = "0.12.1"
httparse = "1.8.0"
tracing = "0.1.40"
futures-core = "0.3"
futures-util = "0.3"
http-body = "1.0"
http-body-util = "0.1"
url = "2.5.4"
futures.workspace = true

[dev-dependencies]
tokio = { version = "1.35", features = ["full", "test-util"] }
tokio-test = "0.4.3"
