[package]
name = "rama-json"
description = "streaming JSON tools for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["json", "jsonpath", "streaming", "rama"]
categories = ["parser-implementations", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-linux-android",
]

[features]
default = ["std"]
std = ["rama-error/std", "rama-utils/std", "serde/std"]

[dependencies]
itoa = { workspace = true }
rama-error = { workspace = true, features = ["std"] }
rama-utils = { workspace = true, features = ["std"] }
ryu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }

[lints]
workspace = true
