[package]
name = "rama-macros"
description = "procedural macross for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["rama"]
categories = ["asynchronous", "network-programming", "web-programming"]
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]

[dev-dependencies]
paste-test-suite = { version = "0", path = "tests/macros" }
rustversion = { workspace = true }
trybuild = { workspace = true, features = ["diff"] }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
