[package]
name = "rama-net-apple-networkextension"
description = "Apple Network Extension support for rama"
version = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
keywords = ["io", "async", "non-blocking", "network", "rama"]
categories = ["asynchronous", "network-programming", "api-bindings", "security"]
authors = { workspace = true }
rust-version = { workspace = true }

[package.metadata.cargo-public-api-crates]
allowed = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-apple-darwin"
targets = ["x86_64-apple-darwin"]

[features]
default = []
# Define [`dial9`] runtime-telemetry event TYPES for the transparent
# proxy engine's flow lifecycle (open / close / handler-deadline).
#
# Only the trace-format crate is pulled in: the recording side
# (`dial9-tokio-telemetry`, which needs `--cfg tokio_unstable`) is
# intentionally NOT a dep here since the events are reusable type
# definitions and the runtime wiring belongs to the application that
# constructs the `TracedRuntime`. Pulling `dial9-tokio-telemetry` into
# a workspace-wide `cargo check --all-features` would force
# `tokio_unstable` on unrelated crates.
#
# [dial9]: https://github.com/dial9-rs/dial9-tokio-telemetry
dial9 = ["dep:dial9-trace-format"]

[dependencies]
dial9-trace-format = { workspace = true, optional = true }
libc = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
rama-core = { workspace = true }
rama-net = { workspace = true }
rama-tcp = { workspace = true }
rama-udp = { workspace = true }
rama-utils = { workspace = true }
tokio = { workspace = true, features = ["io-util", "rt-multi-thread", "sync"] }
tracing = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
